--- a/frontend/src/app/shared/component/change-password/change-password.component.html
+++ b/frontend/src/app/shared/component/change-password/change-password.component.html
@@ -2,14 +2,14 @@
 <div class="row">
   <div class="col-lg-4 col-md-12">
       <div class="form-group">
-        <label>User Name</label>
+        <label>{{"common.userName" | translate}}</label>
         <div class="input-with-icon">
           <input type="text" class="form-control" [placeholder]="'User Name'" formControlName="userName">
           <i class="fas fa-lock"></i>
         </div>
       </div>
       <div class="form-group">
-        <label>Current Password</label>
+        <label>{{"common.currentPassword" | translate}}</label>
         <div appMarkAsterisk class="input-with-icon">
           <input type="password" class="form-control" [placeholder]="'Current Password'" formControlName="current_password">
           <i class="fas fa-lock"></i>
@@ -17,7 +17,7 @@
         <app-control-messages [control]="f['current_password']"></app-control-messages>
       </div>
       <div class="form-group">
-        <label>New Password</label>
+        <label>{{"common.newPassword" | translate}}</label>
         <div appMarkAsterisk class="input-with-icon input-group">
           <input appPassword type="password" class="form-control" [placeholder]="'New Password'" formControlName="password">
           <i class="fas fa-lock"></i>
@@ -25,7 +25,7 @@
         <app-control-messages [control]="f['password']"></app-control-messages>
       </div>
       <div class="form-group">
-        <label>Confirm Password</label>
+        <label>{{"common.confirmPassword" | translate}}</label>
         <div appMarkAsterisk class="input-with-icon input-group">
           <input appPassword type="password" class="form-control" [placeholder]="'Confirm Password'" formControlName="confirmPassword">
           <i class="fas fa-lock"></i>
@@ -37,13 +37,13 @@
 <div class="row mt-5">
   <div class="col-lg-4 col-md-6">
     <div class="form-group">
-      <button type="button" class="btn btn-secondary btn-block btn-lg">Cancel</button>
+      <button type="button" class="btn btn-secondary btn-block btn-lg">{{ "shared.cancel" |translate}}</button>
     </div>
   </div>
   <div class="col-lg-4 col-md-6">
     <div class="form-group">
       <button  [disabled]="changePasswordForm.invalid" type="submit" class="btn btn-theme-blue btn-block btn-lg">
-        <span [hidden]="isLoading">Submit</span>
+        <span [hidden]="isLoading">{{ "shared.submit" | translate }}</span>
           <span [hidden]="!isLoading">
             <i class="fa fa-spinner" aria-hidden="true"></i>
           </span>
