--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -2421,7 +2421,7 @@ a:hover {
     display: -ms-flexbox!important;
     display: flex!important;
     width: 95%;
-	white-space: pre-wrap !important;
+	/*white-space: pre-wrap !important;*/
 	
 }
 .handsExp span{
