layout bug fixing

--- a/frontend/src/app/modules/features/user/user-chart/user-chart.component.html
+++ b/frontend/src/app/modules/features/user/user-chart/user-chart.component.html
@@ -1,6 +1,6 @@
 <!-- //Nav Tab Section -->
 <section class="my-4">
-	<div [ngClass]="(screenWidth >= 1500)?'container-fluid':'container'" >
+	<div [ngClass]="(screenWidth >= 1500)?'container':'container'" >
 		<div class="row my-5">
 			<div class="col-lg-7 col-md-7 matches-8">
 				<button [ngClass]="isActive ? 'active' : ''" type="button" class="btn btn-sm btn-outline-success rounded-pill px-3 mr-1">Active <i class="fas fa-times small ml-1" ></i></button>
