--- a/frontend/src/app/layout/content/content.component.html
+++ b/frontend/src/app/layout/content/content.component.html
@@ -1,9 +1,9 @@
-<div>
-  <app-header></app-header>
+<div >
+  <app-header *ngIf="!router?.url?.includes('/not-found') "></app-header>
 
   <div class="">
     <router-outlet></router-outlet>
   </div>
 
-  <app-footer></app-footer>
+  <app-footer *ngIf="!router?.url?.includes('/not-found') "></app-footer>
 </div>
