--- a/frontend/src/app/modules/features/employer/profile/create-employer-profile/create-employer-profile.component.html
+++ b/frontend/src/app/modules/features/employer/profile/create-employer-profile/create-employer-profile.component.html
@@ -119,13 +119,13 @@
           </div>
         </div>
 		
-		<div class="col-lg-8 col-md-12  form-group">
+<!-- 		<div class="col-lg-8 col-md-12  form-group">
 			<div class="form-group">
 				<label>{{"common.inviteLink" | translate}}</label>
 				<input   formControlName="invite_url" type="text" class="form-control "
 				[placeholder]="'common.inviteLink' | translate">
 			</div>
-		</div>
+		</div> -->
 
         <div class="col-lg-8 col-md-12  form-group">
           <label>{{"shared.aboutUs" | translate}}</label>
