--- a/frontend/src/app/modules/features/employer/profile/employer-setting/employer-setting.component.html
+++ b/frontend/src/app/modules/features/employer/profile/employer-setting/employer-setting.component.html
@@ -16,11 +16,86 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 title">
-        <h2>{{"shared.accountSetting" | translate}}</h2>
+		<ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+		  <li class="nav-item" [ngClass]="{'active': currentTabInfo.tabNumber == 1}">
+			<a
+			(click)="onTabChange({tabName: 'account', tabNumber: 1})"
+			 href="javascript:;" class="nav-link" [ngClass]="{'active': currentTabInfo.tabNumber == 1}">
+			 {{"shared.accountSetting" | translate}}
+			</a>
+		  </li>
+		  <li class="nav-item" [ngClass]="{'active': currentTabInfo.tabNumber == 2}">
+			<a
+			(click)="onTabChange({tabName: 'inviteLink', tabNumber: 2})"
+			 href="javascript:;" class="nav-link" [ngClass]="{'active': currentTabInfo.tabNumber == 2}">
+			 {{"common.inviteSettings" | translate}}
+			</a>
+		  </li>
+		</ul>
       </div>
     </div>
-    <app-change-password [role]="'employer'">
+    <app-change-password [role]="'employer'" *ngIf="currentTabInfo.tabNumber == 1">
 
     </app-change-password>
+	
+	<div *ngIf="currentTabInfo.tabNumber == 2 ">
+	<div *ngIf="companyProfileInfo.invite_status == true ">
+	  <form method="post" #companyNgForm="ngForm" [formGroup]="createCompanyForm" (ngSubmit)="onSaveComapnyInfo()">
+		<div class="container">
+		
+			<div class="col-lg-8 col-md-12  form-group">
+				<div class="form-group">
+					<label>{{"common.inviteLink" | translate}}</label>
+					<input   formControlName="invite_url" type="text" class="form-control "
+					[placeholder]="'common.inviteLink' | translate">
+				</div>
+			</div>
+		  </div>
+		  
+		  <div class="row mt-5">
+			<div class="col-lg-4 col-md-6">
+			  <div class="form-group">
+				<button type="button"  class="btn btn-secondary btn-block btn-lg">{{"shared.cancel" | translate }}</button>
+			  </div>
+			</div>
+			<div class="col-lg-4 col-md-6">
+			  <div class="form-group">
+				<button [disabled]="(!createCompanyForm.valid && !invalidMobile ) || (createCompanyForm.value.invite_url ==null || createCompanyForm.value.invite_url.trim() =='' ) || createCompanyForm.value.invite_url.trim().split('/')[2] !=  'calendly.com'  " type="submit" class="btn btn-theme-blue btn-block btn-lg">{{"shared.submit" | translate }}</button>
+			  </div>
+			</div>
+		  </div>
+	  </form>
+	</div>
+	<div *ngIf="companyProfileInfo.invite_status != true ">
+		<div class="row ">
+		<div class="col-lg-6 col-md-12">
+		<img src="assets/images/appointment.png" class="img-fluid mx-auto"/>
+		</div>
+		<div class="col-lg-6 col-md-12" style="align-self: center;">
+			<a  (click)="sendInviteLink()" class="animated-button1" style="cursor:pointer;">
+			  <span></span>
+			  <span></span>
+			  <span></span>
+			  <span></span>
+			  {{"common.inviteSettingsTitle" | translate}}
+			</a>
+		</div>
+		</div>
+	</div>
+	</div>
   </div>
 </section>
+<ng-template #openSuccessPopup let-modal>
+	<div class="modal-content">
+		<div class="modal-body text-center">
+			<h1 class="text-green mx-auto pt-4"><i class="far fa-check-circle"></i></h1>
+			<h6 class="mt-3">We will send the invite link to the <a href="mailto:{{employerDetails?.email}}" >{{employerDetails.email}}</a> account</h6>
+		</div>
+		<div class="modal-footer">
+			<div class=" mx-auto">
+				<button type="button" class="btn btn-theme-blue" style="margin-right:10px;"  (click)="closePopup()" data-dismiss="modal">Ok</button>
+				<button type="button" class="btn btn-theme-green"  (click)="navigateProfile()">Go to Profile</button>
+			</div>
+		</div>
+	</div>
+</ng-template>
